syntax = "proto3";

package hello;

service HelloService {
    rpc Hello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply{
    string message =1;
}
